Aggiunte immagini mancanti

--- a/cpp.html
+++ b/cpp.html
@@ -2546,8 +2546,7 @@
 				Si vuole gestire le ore di lavoro svolte, in una settimana, da alcune persone.<br>
 				Prevedere una matrice e 2 vettori, come nell’esempio mostrato in figura:<br><br>
 
-
-						//FIGURA DA INSERIRE!
+				<img src=immagini/cartellino.png>
 
 				<br>
 				Realizzare un programma in C++ che preveda il seguente menù:<br><br>
